* CHANGES IN dplR VERSION 1.5.7

File: corr.rwl.seg.R
--------------------

- New feature: allow the master series to be built from a second set of
  tree ring series by using a data.frame 'master' argument
- Replaced some for loops with cleaner vectorized operations or apply().

File: helpers.R
---------------

- Fixed a bug in fix.names(), related to creating unique short names.
  The bug affected read.tridas(), write.compact(), write.tridas() and
  write.tucson() but probably manifested itself quite rarely.

File: sea.R
-----------

- Extra input checks (e.g. x must have explicit, non-automatic row-names)
- Some matrices now have the correct type (numeric instead of logical)
  right from the beginning
- Small optimization: a temporary matrix is completely overwritten on
  every round of a loop, so no need to reinitialize
- Braces always used in if (else) constructs


* CHANGES IN dplR VERSION 1.5.6

File: write.tucson.R
------------------------

- Changed series IDs to justify left instead of right. I'm not sure why
  they ever wanted to be justified left. Silly. (AGB)

File: NAMESPACE
---------------
- Exporting new function common.interval()

File: common.interval.R
------------------------

- New function common.interval() trims a rwl object to a common interval
  using one of three methods. Contributed by a user Filipe Campelo (fcampelo@ci.uc.pt).
  This is his first contribution. Added to author list in DESCRIPTION.

File: corr.rwl.seg.R
--------------------

- Bug fix: series names were not shown (numbers were shown instead)
- Bug fix: there were off-by-one errors in the length of the bars

File: DESCRIPTION
-----------------
- Changed author and maintainer to Andy Bunn from Andrew G. Bunn to keep parity between
  the names and the email address AGB uses to submit to CRAN. This was made at the
  request of Kurt Hornik at CRAN

* CHANGES IN dplR VERSION 1.5.5

File: NAMESPACE
---------------

- Exporting new functions

Various .R files:
-----------------
