@@ -2,6 +2,8 @@
 {
     ## Drops NA and NaN values!
     y <- as.double(x[!is.na(x)])
+    n <- as.integer(length(y))
+    stopifnot(!is.na(n))
     .C(dplR.mean,
-       y, as.integer(length(y)), result=NaN, NAOK=TRUE, DUP=FALSE)$result
+       y, n, result=NaN, NAOK=TRUE, DUP=FALSE)$result
 }
