@@ -1,6 +1,8 @@
 `sens1` <- function(x)
 {
     y <- as.double(x[!is.na(x)])
+    n <- as.integer(length(y))
+    stopifnot(!is.na(n))
     .C(dplR.sens1,
-       y, as.integer(length(y)), result=NaN, NAOK=TRUE, DUP=FALSE)$result
+       y, n, result=NaN, NAOK=TRUE, DUP=FALSE)$result
 }
