@@ -1,5 +1,11 @@
 * CHANGES IN dplR VERSION 1.5.7
 
+Various .R files
+----------------
+
+- Check that length of vector does not overflow integer datatype
+  before use of .C()
+
 File: corr.rwl.seg.R
 --------------------
 
